[metadata]
name = mediapy
version = 0.0.1
author = mkbach
author_email = mkbach@mediapy.com
description = Package for editing frames <-> videos
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/euteryum/mediapy
project_urls =
    Bug Tracker = https://github.com/euteryum/mediapy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = mediapy
packages = find:
python_requires = >=3.6

[options.packages.find]
where = mediapy